# tfg-distributed-transformers

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  paravit.py  pyproject.toml  tfg.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: README.md  train.yaml  train_cluster.yaml  train_cluster_bce.yaml  train_cluster_focal.yaml  train_cluster_v3.yaml  train_ddp_cpu_test.yaml  train_ddp_verode.yaml  train_demo_ddp.yaml  train_demo_single.yaml  train_heterogeneous_ddp.yaml  train_heterogeneous_ddp_demo.yaml  train_heterogeneous_ddp_smoke.yaml  train_local_demo_bce.yaml  train_local_demo_focal.yaml  train_model_parallel_kaggle.yaml  train_v3.yaml
configs/models/: resnet50.yaml  vit_tiny.yaml
dashboard/: __init__.py  app.py  data.py  theme.py
docs/: class_diagram.puml  kaggle_speedup_runbook.md  model_parallel_runbook.md  performance_model.md  verode_focal_runbook.md
logs/local/: batch_metrics_20260511_165947.csv  batch_metrics_20260511_171040.csv  batch_metrics_20260511_220034.csv  batch_metrics_20260513_124120.csv  batch_metrics_26052026_221409.csv  batch_metrics_26052026_231014.csv  (+21 more)
notebooks/: 01_explore_dataset.ipynb
scripts/: benchmark.py  build_site.py  check_feasibility.py  eval.py  export_kaggle_subset.py  ingest_mlflow.py  make_smoke_subset.py  run_mlflow.sh  train_ddp.py  train_heterogeneous_ddp.py  train_model_parallel.py  train_single_gpu.py
site/: index.html
src/: cli.py  cli_menu.py  cloud_cost.py  estimation_models.py  gpu_specs.py  performance_model.py  precision.py
tests/: conftest.py  run_web_tabs_check.py
(+297 files in other folders)
