[project]
name = "tfg-distributed-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "nvidia-ml-py>=13.595.45",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "rasterio>=1.5.0",
    "streamlit>=1.57.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
